# pageindex

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/pageindex/: __init__.py  batch.py  cli.py  llm.py  repo.py  tree.py  utils.py
src/pageindex/markdown/: processor.py
src/pageindex/pdf/: __init__.py  parser.py  processor.py  toc.py
tests/: test_config.py  test_tree.py  test_utils.py
